--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "reset-db": "mysql -u root -p    < db/schema.sql",
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "seed": "node seeds/index.js",
     "dependencies": "npm i bcrypt && npm i connect-session-sequelize && npm i dotenv && npm i express && npm i express express-handlebars && npm i express express-session && npm i express handlebars && npm i mysql2 && npm i sequelize"
   },
