Updated connection.js && .env

--- a/.env
+++ b/.env
@@ -2,4 +2,8 @@ DB_NAME='tech_blog_db'
 DB_HOST='127.0.0.1'
 DB_PWORD=''
 DB_USER='root'
-PORT=3001
+PORT=3306
+
+JAWSDB_URL='ro2padgkirvcf55m.cbetxkdyhwsb.us-east-1.rds.amazonaws.com'
+JAWSDB_USER='linu9ia060jzam5j'
+JAWSDB_PW='dh2cm8y9nghcolrp'
