Updated connection.js and .env

--- a/.env
+++ b/.env
@@ -1,9 +1,5 @@
-DB_NAME='tech_blog_db'
-DB_HOST='127.0.0.1'
-DB_PWORD=''
-DB_USER='root'
+DB_NAME='qg7lu6vzba0ba1lf'
+DB_HOST='ro2padgkirvcf55m.cbetxkdyhwsb.us-east-1.rds.amazonaws.com'
+DB_PWORD='dh2cm8y9nghcolrp'
+DB_USER='linu9ia060jzam5j'
 PORT=3306
-
-JAWSDB_URL='ro2padgkirvcf55m.cbetxkdyhwsb.us-east-1.rds.amazonaws.com'
-JAWSDB_USER='linu9ia060jzam5j'
-JAWSDB_PW='dh2cm8y9nghcolrp'
