--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "bcrypt": "^5.1.1",
     "connect-session-sequelize": "^7.1.7",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
     "handlebars": "^4.7.8",
@@ -26,6 +25,7 @@
     "sequelize": "^6.35.1"
   },
   "dependencies": {
-    "@material/dialog": "^14.0.0"
+    "@material/dialog": "^14.0.0",
+    "express": "^4.18.2"
   }
 }
