--- a/package.json
+++ b/package.json
@@ -8,24 +8,24 @@
     "reset-db": "mysql -u root -p    < db/schema.sql",
     "start": "node server.js",
     "seed": "node seeds/index.js",
-    "dependencies": "npm i bcrypt && npm i connect-session-sequelize && npm i dotenv && npm i express && npm i express express-handlebars && npm i express express-session && npm i express handlebars && npm i mysql2 && npm i sequelize"
+    "depend": "npm i connect-session-sequelize -P && npm i dotenv -P && npm i express -P && npm i express express-handlebars -P && npm i express express-session -P && npm i express handlebars -P && npm i mysql2 -P && npm i sequelize -P"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "dependencies": {
+    "@material/dialog": "^14.0.0",
     "bcrypt": "^5.1.1",
     "connect-session-sequelize": "^7.1.7",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
     "handlebars": "^4.7.8",
     "mysql2": "^3.6.3",
-    "nodemon": "^3.0.1",
     "sequelize": "^6.35.1"
-  },
-  "dependencies": {
-    "@material/dialog": "^14.0.0",
-    "express": "^4.18.2"
   }
 }
