--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "## Directory",
   "main": "server.js",
+  "engines": {
+    "npm": "10.2.3",
+    "node": "20.8.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "reset-db": "mysql -u root -p    < db/schema.sql",
