--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DB_NAME='qg7lu6vzba0ba1lf'
 DB_HOST='ro2padgkirvcf55m.cbetxkdyhwsb.us-east-1.rds.amazonaws.com'
-DB_PWORD='dh2cm8y9nghcolrp'
+DB_PASSWORD='dh2cm8y9nghcolrp'
 DB_USER='linu9ia060jzam5j'
 # PORT=3306
